--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="Busca-e-midia">
             <div class="busca">
                 <label for="busca">SUBSCRIBE</label>
-                <input type="search" name="busca " autofocus>
+                <input type="search" name="busca ">
             </div>
             <a href="#"><img src="img/icon-midia-f.png"></a>
             <a href="#"><img src="img/icon-midia-youtube.png"></a>
